@@ -1,3 +1,7 @@
+2017-01-12  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* misc/openvas_logging.c: Fix typos in documentation.
+
 2017-01-12  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl.c (parse_script_infos): Remove "NVTI" from args list on
